Version 1.13.2+dev:
 * Language and i18n:
   * Updated translations:

Version 1.13.2:
 * Add-ons client:
   * Warn user if attempting to upload an addon with a version lesser than or
     equal to a published version.
 * Campaigns:
   * Delfador's Memoirs:
     * Added defeat condition for death of the last undead veteran in
       'Showdown in the Northern Swamp' (bug #23668)
   * Eastern Invasion:
     * Fixed scenario events not working right on easy difficulty in 'Captured'.
   * The South Guard:
     * Deoran is now the grandson of the Haldiel in HttT instead.
   * Tutorial:
     * Fixed transition to second scenario.
   * Under the Burning Suns:
     * Gave Garak a new ability called Teaching (at the start of every turn,
       his experience points are transferred to adjacent units on the same side)
 * Editor:
   * Add Recent Files menu with a list of recently saved or loaded maps or
     scenarios, up to a custom limit (by default 10) that can be set in
     Advanced Preferences.
   * Fixed Player Start labels not being updated with repeat map generations
     (bug #20036)
 * Graphics:
   * New animated water.
   * New standing animation for the Dwarvish Runesmith
   * New generic portraits for the Troll and Troll Whelp
   * New game logo
 * Language and i18n:
   * Updated translations: British English, French, Galician, Hungarian,
     Italian, Japanese, Latvian, Polish, RACV, Scottish Gaelic, Slovak, Spanish
   * Fixed crashes during start-up on Windows resulting from add-ons containing
     erroneous textdomain declarations (bug #23839).
   * Spelling and grammar review across all official campaigns.
 * Lua API:
   * It is now possible to implement custom [effect]s with wesnoth.effects
   * Changed interface for the wesnoth.synchronize_choice function
   * Added support for unit.level field (read only)
   * Added support for unit.advancements field (bug #23677)
   * Added support for unit.parry and unit.accuracy fields